[gd_scene load_steps=11 format=3 uid="uid://iwetrln5b0jd"]

[ext_resource type="Script" uid="uid://ccjb2piakop47" path="res://scripts/game.gd" id="1_0tnpc"]
[ext_resource type="Script" uid="uid://f8wtss8j038n" path="res://scripts/game_timer.gd" id="1_gee14"]
[ext_resource type="PackedScene" uid="uid://7d6yhqljsgsh" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="AudioStream" uid="uid://dsxtlcyr7wary" path="res://assets/sounds/alarm.ogg" id="2_0tnpc"]
[ext_resource type="Script" uid="uid://cecvwxy6a1hyv" path="res://scripts/map.gd" id="3_0tnpc"]
[ext_resource type="PackedScene" uid="uid://o46cxsgrh3fg" path="res://scenes/maps/normal_map.tscn" id="3_vtaks"]
[ext_resource type="Script" uid="uid://n6x4q6qfwxxr" path="res://scripts/spawn_points.gd" id="4_gee14"]
[ext_resource type="AudioStream" uid="uid://bs70kr5on24t7" path="res://assets/sounds/music.ogg" id="5_p57ef"]
[ext_resource type="Script" uid="uid://cadh3emn4iyd0" path="res://scripts/background_music.gd" id="6_u5sy4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lnu2h"]

[node name="Game" type="Control"]
material = SubResource("ShaderMaterial_lnu2h")
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0tnpc")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.72, 2.72)

[node name="MapContainer" type="Node2D" parent="CenterContainer"]
script = ExtResource("3_0tnpc")

[node name="NormalMap" parent="CenterContainer/MapContainer" instance=ExtResource("3_vtaks")]

[node name="SpawnPoints2" type="Node2D" parent="CenterContainer/MapContainer/NormalMap"]
position = Vector2(-8, -8)
script = ExtResource("4_gee14")
player_scene = ExtResource("1_uwrxv")

[node name="SpawnTopLeft" type="Marker2D" parent="CenterContainer/MapContainer/NormalMap/SpawnPoints2"]
position = Vector2(-120, -88)

[node name="SpawnTopRight" type="Marker2D" parent="CenterContainer/MapContainer/NormalMap/SpawnPoints2"]
position = Vector2(136, -88)

[node name="SpawnBottomLeft" type="Marker2D" parent="CenterContainer/MapContainer/NormalMap/SpawnPoints2"]
position = Vector2(-119, 103)

[node name="SpawnBottomRight" type="Marker2D" parent="CenterContainer/MapContainer/NormalMap/SpawnPoints2"]
position = Vector2(137, 103)

[node name="SpawnCenter" type="Marker2D" parent="CenterContainer/MapContainer/NormalMap/SpawnPoints2"]
position = Vector2(9, 8)

[node name="Players" type="Node2D" parent="CenterContainer/MapContainer/NormalMap/SpawnPoints2"]

[node name="GameTimer" type="Node" parent="." node_paths=PackedStringArray("alarm_player")]
script = ExtResource("1_gee14")
alarm_player = NodePath("AudioStreamPlayer")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="GameTimer"]
stream = ExtResource("2_0tnpc")
bus = &"Ambience"
parameters/looping = true

[node name="BackgroundMusic" type="Node" parent="." node_paths=PackedStringArray("music_player")]
script = ExtResource("6_u5sy4")
music_player = NodePath("AudioStreamPlayer")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="BackgroundMusic"]
stream = ExtResource("5_p57ef")
autoplay = true
bus = &"Music"
parameters/looping = true
